[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "connections"
authors = [{ name = "Antonio Kim", email = "antonio_kim@outlook.com" }]
readme = "README.md"
requires-python=">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "typer>=0.15.2"
]

[project.optional-dependencies]
test = [
    "pytest>=2.7.3",
    "pytest-cov",
    "black>=23.0.0",  
    "flake8>=6.0.0",  
]

[project.scripts]
connections = "connections:app"
