[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "connections"
authors = [{ name = "Antonio Kim", email = "antonio_kim@outlook.com" }]
readme = "README.md"
requires-python=">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "typer>=0.4.0",    
    "rich",
    "click>=8.0.0",    
    "hatch"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "black>=25.0",     
    "pylint",
]

[project.scripts]
connections = "connections.cli:app"
